fix form not fitting into mobile

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 form {
   height: 520px;
-  width: 400px;
+  width: 360px;
   background-color: rgba(255, 255, 255, 0.13);
   position: absolute;
   transform: translate(-50%, -50%);
@@ -27,11 +27,10 @@ form {
   backdrop-filter: blur(10px);
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-  padding: 50px 35px;
+  padding: 50px 10px;
 }
 
 form * {
-  font-family: 'Poppins', sans-serif;
   color: #ffffff;
   letter-spacing: 0.5px;
   outline: none;
@@ -43,6 +42,7 @@ form h3 {
   font-weight: 500;
   line-height: 42px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .form-group {
